# AsyncProcCodeChallenge

./: CMakeLists.txt  FileWriteBackgroundTask.cpp  FileWriteBackgroundTask.h  README.md  Stoppable.h  ThreadPool.h  ThreadSafeBlockingQueue.h  main.cpp
include/: PigLatinConverter.h
lib/windows/: PigLatinConverter.lib
